ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item_ext, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item_ext, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    value_definition: $ => seq(
      choice(seq('let', optional($._attribute), optional('rec')), $.let_operator),
      sep1(choice('and', $.and_operator), $.let_binding)
    ),

    let_binding: $ => seq(
      field('pattern', $._binding_pattern_ext),
      repeat($._parameter),
      optional($._polymorphic_typed),
      optional(seq(':>', $._type_ext)),
      '=',
      field('body', $._sequence_expression_ext),
      repeat($.item_attribute)
    ),

    _parameter: $ => choice(
      $.parameter,
      alias($._parenthesized_abstract_type, $.abstract_type)
    ),

    parameter: $ => choice(
      field('pattern', $._simple_pattern_ext),
      seq(
        choice('~', '?'),
        field('pattern', alias($._identifier, $.value_pattern))
      ),
      seq(
        $._label,
        token.immediate(':'),
        field('pattern', $._simple_pattern_ext)
      ),
      seq(
        choice('~', '?'),
        '(',
        field('pattern', alias($._identifier, $.value_pattern)),
        optional($._typed),
        optional(seq('=', $._sequence_expression_ext)),
        ')'
      ),
      seq(
        $._label,
        token.immediate(':'),
        '(',
        field('pattern', $._pattern_ext),
        optional($._typed),
        seq('=', $._sequence_expression_ext),
        ')'
      )
    ),

    module_definition: $ => seq(
      'module', optional($._attribute), optional('rec'),
      sep1('and', $.module_binding)
    ),

    module_binding: $ => seq(
      field('name', choice($._module_name, alias('_', $.module_name))),
      repeat($.module_parameter),
      optional($._module_typed),
      optional(seq('=', field('body', $._module_expression_ext))),
      repeat($.item_attribute)
    ),

    module_parameter: $ => parenthesize(optional(seq(
      field('name', choice($._module_name, alias('_', $.module_name))),
      $._module_typed
    ))),

    include_module: $ => seq(
      'include',
      optional($._attribute),
      $._module_expression_ext,
      repeat($.item_attribute)
    ),

    _module_typed: $ => seq(':', $._module_type_ext),

    _module_type_ext: $ => choice(
      $._module_type,
      $._extension
    ),

    _simple_module_expression_ext: $ => choice(
      $._simple_module_expression,
      $._extension
    ),

    _module_expression_ext: $ => choice(
      $._module_expression,
      $._extension
    ),

    structure: $ => seq(
      'struct',
      optional($._structure),
      'end'
    ),

    functor: $ => prec.right(seq(
      'functor',
      repeat1($.module_parameter),
      '->',
      field('body', $._module_expression_ext),
    )),

    module_application: $ => seq(
      field('functor', $._module_expression_ext),
      choice(
        field('argument', $._simple_module_expression_ext),
        seq('(', ')')
      )
    ),

    typed_module_expression: $ => parenthesize(seq(
      $._module_expression_ext,
      $._module_typed
    )),

    packed_module: $ => parenthesize(seq(
      'val',
      $._expression_ext,
      optional($._module_typed),
      optional(seq(':>', $._module_type_ext))
    )),

    parenthesized_module_expression: $ => parenthesize($._module_expression_ext),

    // Class types

    _typed: $ => seq(':', $._type_ext),

    _polymorphic_typed: $ => seq(':', $._polymorphic_type),

    polymorphic_type: $ => seq(
      choice(
        repeat1($.type_variable),
        alias($._abstract_type, $.abstract_type)
      ),
      '.',
      $._type_ext
    ),

    _abstract_type: $ => seq(
      'type',
      repeat1($._type_constructor)
    ),

    _simple_type_ext: $ => choice(
      $._simple_type,
      $._extension
    ),

    _type_ext: $ => choice(
      $._type,
      $._extension
    ),

    constructed_type: $ => prec(PREC.app, seq(
      choice(
        $._simple_type_ext,
        parenthesize(sep1(',', $._type_ext))
      ),
      $.type_constructor_path
    )),

    _expression_ext: $ => choice(
      $._expression,
      $._extension
    ),

    _sequence_expression_ext: $ => choice(
      $._sequence_expression,
      $._extension
    ),

    product_expression: $ => prec.left(PREC.prod, seq(
      field('left', $._expression_ext),
      ',',
      field('right', $._expression_ext)
    )),

    _simple_pattern_ext: $ => choice(
      $._simple_pattern,
      $._extension
    ),

    _pattern_ext: $ => choice(
      $._pattern,
      $._extension
    ),

    _binding_pattern_ext: $ => choice(
      $._binding_pattern,
      $._extension
    ),

    tuple_pattern: $ => prec.left(PREC.prod, seq(
      $._pattern_ext,
      ',',
      $._pattern_ext
    )),

    parenthesized_pattern: $ => parenthesize($._pattern_ext),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    _sign_operator: $ => choice('+', '-', '+.', '-.'),

    infix_operator: $ => choice(
      $._hash_operator,
      $._pow_operator,
      $._mult_operator,
      $._add_operator,
      $._concat_operator,
      $._rel_operator,
      $._and_operator,
      $._or_operator,
      $._assign_operator
    ),

    _hash_operator: $ => /#[#!$%&*+\-./:<=>?@^|~]+/,

    _pow_operator: $ => choice(
      token(seq('**', repeat(OP_CHAR))),
      'lsl', 'lsr', 'asr'
    ),

    _mult_operator: $ => choice(
      token(seq(/[*/%]/, repeat(OP_CHAR))),
      'mod', 'land', 'lor', 'lxor'
    ),

    _add_operator: $ => token(choice(
      seq('+', repeat(OP_CHAR)),
      seq('-', choice(optional(/[!$%&*+\-./:<=?@^|~]/), repeat2(OP_CHAR))),
    )),

    _concat_operator: $ => token(
      seq(/[@^]/, repeat(OP_CHAR))
    ),

    _rel_operator: $ => token(choice(
      seq(/[=>$]/, repeat(OP_CHAR)),
      seq('<', choice(optional(/[!$%&*+./:<=>?@^|~]/), repeat2(OP_CHAR))),
      seq('&', choice(/[!$%*+\-./:<=>?@^|~]/, repeat2(OP_CHAR))),
      seq('|', choice(/[!$%&*+\-./:<=>?@^~]/, repeat2(OP_CHAR))),
      '!='
    )),

    _and_operator: $ => choice('&', '&&'),

    _or_operator: $ => choice('or', '||'),

    _assign_operator: $ => choice(':='),

    let_operator: $ => token(
      seq('let', /[$&*+\-/<=>@^|]/, repeat(OP_CHAR))
    ),

    and_operator: $ => token(
      seq('and', /[$&*+\-/<=>@^|]/, repeat(OP_CHAR))
    ),

    _value_name: $ => choice(
      alias($._identifier, $.value_name),
      $.parenthesized_operator
    ),

    parenthesized_operator: $ => parenthesize(choice(
      $.prefix_operator,
      alias($._sign_operator, $.infix_operator),
      $.infix_operator,
      seq(
        '.',
        $.indexing_operator,
        choice(
          seq('(', optional(seq(';', '..')), ')'),
          seq('[', optional(seq(';', '..')), ']'),
          seq('{', optional(seq(';', '..')), '}')
        ),
        optional('<-')
      ),
      $.let_operator,
      $.and_operator,
      $.match_operator
    )),

    value_path: $ => path($.module_path, $._value_name),

    module_path: $ => prec(1, path($.module_path, $._module_name)),

    module_type_path: $ => path($.extended_module_path, $._module_type_name),

    type_constructor_path: $ => prec(1, path($.extended_module_path, $._type_constructor)),

    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _module_type_name: $ => alias(choice($._capitalized_identifier, $._identifier), $.module_type_name),
    _identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    _label: $ => seq(choice('~', '?'), $._label_name),
    type_variable: $ => seq("'", choice($._identifier, $._capitalized_identifier)),
